RHTAP E2E: Commit generated automatically from Red Hat Trusted Application Pipeline E2E framework

--- a/components/jxq2ivhr8-go/overlays/stage/deployment-patch.yaml
+++ b/components/jxq2ivhr8-go/overlays/stage/deployment-patch.yaml
@@ -12,5 +12,5 @@ spec:
   template: 
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
+      - image: quay.io/rhtap-test-organization-jk/rhtap-qe:jenkins-619efce5e107ebd6b16728326e65793c62753192
         name: container-image  
